--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": "",
+  "repository": "https://github.com/yhsiang/twpinyin.git",
   "keywords": [
     "twpinyin",
     "zhuyin",
